tests/baselines/reference/unusedInterfaceinNamespace2.errors.txt
tests/cases/compiler/unusedInterfaceinNamespace2.ts(2,5): error TS6195: 'i1' is declared but not used.


==== tests/cases/compiler/unusedInterfaceinNamespace2.ts (1 errors) ====
    namespace Validation {
        interface i1 {
        ~~~~~~~~~~~~
!!! error TS6195: 'i1' is declared but not used.
    
        }
    
        export interface i2 {
    
        }
    }